// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthEndpoint the login calls post parent method 1`] = `
Array [
  "/login",
  Object {
    "data": Object {
      "email": "email",
      "password": "password",
      "remember": false,
    },
  },
]
`;

exports[`AuthEndpoint the logout calls post parent method 1`] = `
Array [
  "/logout",
]
`;

exports[`AuthEndpoint the register calls post parent method 1`] = `
Array [
  "/register",
  Object {
    "data": Object {
      "email": "email",
      "email_confirmation": "email",
      "name": "John",
      "password": "password",
      "password_confirmation": "password",
      "remember": false,
    },
  },
]
`;

exports[`AuthEndpoint the requestPasswordReset calls post parent method 1`] = `
Array [
  "/password/email",
  Object {
    "data": Object {
      "email": "email",
    },
  },
]
`;

exports[`AuthEndpoint the resetPassword calls post parent method 1`] = `
Array [
  "/password/reset",
  Object {
    "data": Object {
      "email": "email",
      "password": "password",
      "password_confirmation": "password",
      "token": "token",
    },
  },
]
`;
